{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 59,
  "lineage": "b3f44857-5006-3203-11a9-557e7d833af6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "new-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681160700656:internet-gateway/igw-064d9b75e97f1a549",
            "id": "igw-064d9b75e97f1a549",
            "owner_id": "681160700656",
            "tags": {
              "Name": "fullcycle-igw"
            },
            "tags_all": {
              "Name": "fullcycle-igw"
            },
            "vpc_id": "vpc-08ced562c3961a029"
          },
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "new-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681160700656:route-table/rtb-018f5a72037a77dc1",
            "id": "rtb-018f5a72037a77dc1",
            "owner_id": "681160700656",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064d9b75e97f1a549",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fullcycle-rtb"
            },
            "tags_all": {
              "Name": "fullcycle-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ced562c3961a029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc",
            "aws_internet_gateway.new-igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "new-rtb-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e450c76ee7395c7f",
            "route_table_id": "rtb-018f5a72037a77dc1",
            "subnet_id": "subnet-00ad2422cd5125b20"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06466594e345e5b12",
            "route_table_id": "rtb-018f5a72037a77dc1",
            "subnet_id": "subnet-0cb4bdcaa9600fa98"
          },
          "dependencies": [
            "aws_internet_gateway.new-igw",
            "aws_route_table.new-rtb",
            "aws_subnet.subnets",
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681160700656:security-group/sg-08ef7fa492aafd825",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ef7fa492aafd825",
            "ingress": [],
            "name": "terraform-20211015234203149600000001",
            "name_prefix": "terraform-",
            "owner_id": "681160700656",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fullcycle-sg"
            },
            "tags_all": {
              "Name": "fullcycle-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ced562c3961a029"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.new_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681160700656:subnet/subnet-00ad2422cd5125b20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-00ad2422cd5125b20",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "681160700656",
            "tags": {
              "Name": "fullcycle-subnet-0"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-0"
            },
            "vpc_id": "vpc-08ced562c3961a029"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681160700656:subnet/subnet-0cb4bdcaa9600fa98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0cb4bdcaa9600fa98",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "681160700656",
            "tags": {
              "Name": "fullcycle-subnet-1"
            },
            "tags_all": {
              "Name": "fullcycle-subnet-1"
            },
            "vpc_id": "vpc-08ced562c3961a029"
          },
          "dependencies": [
            "aws_vpc.new_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "new_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:681160700656:vpc/vpc-08ced562c3961a029",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f0f9784891e900c",
            "default_route_table_id": "rtb-0ba424c34761ba068",
            "default_security_group_id": "sg-0de7c9e61b9ea5c52",
            "dhcp_options_id": "dopt-0fabd67b8f9f8e3be",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08ced562c3961a029",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ba424c34761ba068",
            "owner_id": "681160700656",
            "tags": {
              "Name": "fullcycle-vpc"
            },
            "tags_all": {
              "Name": "fullcycle-vpc"
            }
          }
        }
      ]
    }
  ]
}